<?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <Layout tools:ignore="ExtraText">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textView2"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/nickname_edit"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/whats_your_nickname"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/done_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/done"
                android:textAlignment="center"
                android:textColor="#00796B" />

            <TextView
                android:id="@+id/nickname_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_200"
                android:paddingBottom="12dp"
                android:text=""
                android:textAlignment="center"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/star_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/yellow_star"
                app:srcCompat="@android:drawable/button_onoff_indicator_on"
                tools:ignore="ImageContrastCheck" />

            <ScrollView
                android:id="@+id/bio_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                tools:layout_editor_absoluteX="135dp"
                tools:layout_editor_absoluteY="74dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/star"
                        app:srcCompat="@android:drawable/btn_star_big_on"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:id="@+id/bio_text"
                        style="@style/NameStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.2"
                        android:text="@string/bio_text"
                        android:textColor="#A1887F" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </Layout>


</android.support.constraint.ConstraintLayout>




